Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile) part 3

--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -283,20 +283,20 @@ p.title2 {
     font-size: 40%;
   }
   .media-scroller {
-    --_spacer: 12.5px;
+    --_spacer: 15px;
     display: grid;
     gap: var(--_spacer);
     grid-auto-flow: row;
-    grid-auto-columns: 100%;
+    grid-auto-columns: 80%;
 
-    padding: 0 var(--_spacer) var(--_spacer);
+    padding: 0;
 
     overflow-x: auto;
     overscroll-behavior-inline: contain;
   }
 
   .media-scroller--with-groups {
-    grid-auto-columns: 100%;
+    grid-auto-columns: 80%;
   }
 
   p.title {
@@ -354,10 +354,10 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 550px;
-    margin-left: 3.5vw;
-    margin-right: 3.5vw;
-    width: 87.5vw;
+    height: 425px;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    width: 70vw;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
@@ -373,14 +373,14 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 550px;
+    height: 425px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
 
   .media-element > img {
     inline-size: 100%;
-    height: 400px;
+    height: 275px;
     object-fit: cover;
     object-position: center;
     float: bottom;
@@ -390,7 +390,7 @@ p.title2 {
 
   .media-element:hover img {
     inline-size: 100%;
-    height: 400px;
+    height: 275px;
     object-fit: cover;
     object-position: center;
     float: bottom;
@@ -469,7 +469,6 @@ p.title2 {
     background-color: #04020e;
     background-image: url("./img/Clubs-BG.svg");
     background-size: 110vw;
-    background-position: 50% 50%;
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
@@ -479,7 +478,7 @@ p.title2 {
   }
 }
 
-@media screen and (min-width: 20000000px) {
+@media screen and (min-width: 1920px) {
   html {
     font-size: 80%;
     overflow-x: hidden;
